<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="match_parent">
    <ImageView android:layout_width="wrap_content" android:id="@+id/imageView1" android:layout_height="wrap_content" android:src="@drawable/meter"></ImageView>
    
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" 
                  android:text="@string/fare" android:id="@+id/fare_string" android:layout_marginRight="100dip" android:layout_marginTop="16dip"
                  android:layout_alignParentRight="true"
                  style="@style/GlowText" ></TextView>
                  
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" 
                  android:text="@string/tariff" android:id="@+id/tariff_string" android:layout_marginLeft="35dip" android:layout_marginTop="87dip"
                  android:textSize="35sp"
                  style="@style/GlowText" ></TextView>
                  
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" 
                  android:text="@string/extra" android:id="@+id/extra_string" android:layout_marginRight="100dip" android:layout_marginTop="87dip"
                  android:textSize="35sp" android:layout_alignParentRight="true"
                  style="@style/GlowText" ></TextView>
                  
  </RelativeLayout> 
    

<TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" 
             android:gravity="center_vertical|center_horizontal" android:layout_height="wrap_content">
 
    <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:text="Speed: " android:id="@+id/speed_label" android:layout_column="0" android:layout_marginLeft="10dip"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:text="@string/speed" android:id="@+id/speed" android:layout_column="2"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:text="Distance: " android:id="@+id/speed_label" android:layout_column="3" android:layout_marginLeft="10dip"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" 
                  android:text="@string/distance" android:id="@+id/distance" android:layout_column="4"></TextView>        
                  

    </TableRow>
</TableLayout>
<RelativeLayout android:layout_width="match_parent" android:id="@+id/relativeLayout4" android:layout_marginTop="10dip" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal">
     <TextView  android:layout_alignParentLeft="true" android:text="TimerStatus" android:layout_height="wrap_content" android:id="@+id/timerstatus" android:layout_width="wrap_content" android:layout_marginLeft="100dip" ></TextView>
   	 <TextView android:layout_alignParentRight="true" android:text="Timer" android:layout_height="wrap_content" android:id="@+id/timer" android:layout_width="wrap_content" android:layout_marginRight="100dip"></TextView>
   </RelativeLayout>
<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="vertical">  
      
     <com.google.android.maps.MapView
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/mapview"
	    android:layout_width="fill_parent"
	    android:layout_height="260dip"
	    android:clickable="true"
	    android:apiKey="0Qp0BMENg2KbZhlGbjez4dXczAywoL0Wv-w7gfA"/>
	     </LinearLayout>
	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="48dip">
        <com.google.ads.AdView android:id="@+id/adView2"
                         android:layout_width="wrap_content"
                         android:layout_height="48dip"
                         ads:adUnitId="a14dfa282b088a1"
                         ads:adSize="BANNER"
                         ads:loadAdOnCreate="true"
                         layout_alignParent="bottom"/>
         </LinearLayout>
         
</LinearLayout>
